deleted files that ankhsvn should've deleted! bad ankhsvn! consider yourself uninstalled!

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -128,7 +128,7 @@
     <Compile Include="ADC\RTC.cs" />
     <Compile Include="ADC\FloppyDiskController.cs" />
     <Compile Include="ADC\Timer.cs" />
-    <Compile Include="ADC\DriverManager.cs" />
+    <Compile Include="DriverSystem\DriverManager.cs" />
     <Compile Include="ADC\Scheduler.cs" />
     <Compile Include="ADC\TextMode.cs" />
     <Compile Include="ADC\Architecture.cs" />
