--- a/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{14D3B428-413F-11DC-8314-0800200C9A66}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConditionalOperator .cs" />
     <Compile Include="Generics.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="Abstract.cs" />
