implemented long -> byte conversion in AOT (IR.cs:1581), test case works now. Implemented CharEnumerator, test case works now but found some other problems with interfaces (new test cases created). Also cleaned up some stuff.

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -164,6 +164,7 @@
     <Compile Include="FileSystem\FileSystem.cs" />
     <Compile Include="DiagnosticTool\Server.cs" />
     <Compile Include="Korlib\System\ArgumentOutOfRangeException.cs" />
+    <Compile Include="Korlib\System\CharEnumerator.cs" />
     <Compile Include="Korlib\System\Collections\ArrayList.cs" />
     <Compile Include="Korlib\System\Collections\Generic\ICollection.cs" />
     <Compile Include="Korlib\System\Collections\Generic\IEnumerable.cs" />
