* Added FloppyDiskController to main trunk * Included some initial FAT and FileSystem code.

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -78,194 +78,210 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ADC\Dispatcher.cs" />
-    <Compile Include="ADC\IScheduler.cs" />
-    <Compile Include="ADC\RoundRobinScheduler.cs" />
-    <Compile Include="ADC\SpinLock.cs" />
-    <Compile Include="ADC\Thread.cs" />
-    <Compile Include="ADC\ThreadManager.cs" />
-    <Compile Include="ADC\X86\IOPortStream8bit.cs" />
-    <Compile Include="ADC\X86\Thread.cs" />
-    <Compile Include="ADC\X86\ThreadManager.cs" />
-    <Compile Include="DriverSystem\DeviceManager.cs" />
-    <Compile Include="DriverSystem\DriverFlags.cs" />
-    <Compile Include="DriverSystem\Drivers\PCIBusDriver.cs" />
-    <Compile Include="DriverSystem\GenericDriver.cs" />
-    <Compile Include="DriverSystem\Drivers\KeyboardDriver.cs" />
-    <Compile Include="DriverSystem\Drivers\LPCBusDriver.cs" />
-    <Compile Include="DriverSystem\Drivers\RTCDriver.cs" />
-    <Compile Include="ADC\X86\IO.cs" />
-    <Compile Include="ADC\X86\Serial.cs" />
-    <Compile Include="ADC\X86\HardwareResourceManager.cs" />
-    <Compile Include="ADC\X86\Processor.cs" />
-    <Compile Include="ADC\X86\MemoryUtil.cs" />
-    <Compile Include="ADC\X86\ExceptionHandling.cs" />
-    <Compile Include="ADC\X86\TextMode.cs" />
     <Compile Include="ADC\X86\Architecture.cs" />
-    <Compile Include="ADC\X86\GDT.cs" />
     <Compile Include="ADC\X86\AssemblyAttributes.cs" />
-    <Compile Include="ADC\X86\DTPointer.cs" />
-    <Compile Include="ADC\X86\Interlocked.cs" />
     <Compile Include="ADC\X86\Barrier.cs" />
-    <Compile Include="ADC\X86\RTC.cs" />
+    <Compile Include="ADC\X86\BootControl.cs" />
+    <Compile Include="ADC\X86\CMOS.cs" />
+    <Compile Include="ADC\X86\DMA.cs" />
+    <Compile Include="ADC\X86\DTPointer.cs" />
+    <Compile Include="ADC\X86\ExceptionHandling.cs" />
+    <Compile Include="ADC\X86\FloppyDiskController.cs" />
+    <Compile Include="ADC\X86\GDT.cs" />
+    <Compile Include="ADC\X86\HardwareResourceManager.cs" />
+    <Compile Include="ADC\X86\IDT.cs" />
+    <Compile Include="ADC\X86\Interlocked.cs" />
+    <Compile Include="ADC\X86\IO.cs" />
+    <Compile Include="ADC\X86\IOPortStream8bit.cs" />
+    <Compile Include="ADC\X86\Keyboard.cs" />
+    <Compile Include="ADC\X86\MemoryUtil.cs" />
     <Compile Include="ADC\X86\Pager.cs" />
     <Compile Include="ADC\X86\PCI.cs" />
     <Compile Include="ADC\X86\PIC.cs" />
-    <Compile Include="ADC\X86\FloppyDiskController.cs" />
-    <Compile Include="ADC\X86\Keyboard.cs" />
-    <Compile Include="ADC\X86\CMOS.cs" />
-    <Compile Include="ADC\X86\BootControl.cs" />
-    <Compile Include="ADC\X86\DMA.cs" />
-    <Compile Include="ADC\X86\Timer.cs" />
     <Compile Include="ADC\X86\PIT.cs" />
-    <Compile Include="ADC\X86\IDT.cs" />
-    <Compile Include="DriverSystem\GenericDevice.cs" />
-    <Compile Include="ADC\ExceptionHandling.cs" />
-    <Compile Include="ADC\MemoryUtil.cs" />
-    <Compile Include="ADC\Serial.cs" />
-    <Compile Include="ADC\MemoryManager.cs" />
-    <Compile Include="ADC\Pager.cs" />
-    <Compile Include="ADC\Keyboard.cs" />
-    <Compile Include="ADC\TextColor.cs" />
+    <Compile Include="ADC\X86\Processor.cs" />
+    <Compile Include="ADC\X86\RTC.cs" />
+    <Compile Include="ADC\X86\Serial.cs" />
+    <Compile Include="ADC\X86\TextMode.cs" />
+    <Compile Include="ADC\X86\Thread.cs" />
+    <Compile Include="ADC\X86\ThreadManager.cs" />
+    <Compile Include="ADC\X86\Timer.cs" />
+    <Compile Include="ADC\Architecture.cs" />
+    <Compile Include="ADC\Barrier.cs" />
     <Compile Include="ADC\BootControl.cs" />
-    <Compile Include="ADC\Keys.cs" />
+    <Compile Include="ADC\Dispatcher.cs" />
+    <Compile Include="ADC\ExceptionHandling.cs" />
+    <Compile Include="ADC\FloppyDiskController.cs" />
     <Compile Include="ADC\Interlocked.cs" />
+    <Compile Include="ADC\IProcessor.cs" />
+    <Compile Include="ADC\IScheduler.cs" />
+    <Compile Include="ADC\Keyboard.cs" />
+    <Compile Include="ADC\Keys.cs" />
+    <Compile Include="ADC\MemoryManager.cs" />
+    <Compile Include="ADC\MemoryUtil.cs" />
+    <Compile Include="ADC\Pager.cs" />
     <Compile Include="ADC\PCI.cs" />
     <Compile Include="ADC\ProcessorType.cs" />
-    <Compile Include="ADC\Barrier.cs" />
+    <Compile Include="ADC\RoundRobinScheduler.cs" />
     <Compile Include="ADC\RTC.cs" />
-    <Compile Include="ADC\FloppyDiskController.cs" />
-    <Compile Include="ADC\Timer.cs" />
-    <Compile Include="DriverSystem\DriverManager.cs" />
+    <Compile Include="ADC\Serial.cs" />
+    <Compile Include="ADC\SpinLock.cs" />
+    <Compile Include="ADC\TextColor.cs" />
     <Compile Include="ADC\TextMode.cs" />
-    <Compile Include="ADC\Architecture.cs" />
-    <Compile Include="ADC\IProcessor.cs" />
+    <Compile Include="ADC\Thread.cs" />
+    <Compile Include="ADC\ThreadManager.cs" />
+    <Compile Include="ADC\Timer.cs" />
+    <Compile Include="BlockDevice\ByteBuffer.cs" />
+    <Compile Include="BlockDevice\ContinuousRamDisk.cs" />
+    <Compile Include="BlockDevice\FloppyDisk.cs" />
+    <Compile Include="BlockDevice\GenericBlockDevice.cs" />
+    <Compile Include="BlockDevice\IBlockDevice.cs" />
+    <Compile Include="BlockDevice\KernelDisk.cs" />
+    <Compile Include="DiagnosticTool\Server.cs" />
+    <Compile Include="DriverSystem\Drivers\FloppyDiskDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\KeyboardDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\LPCBusDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\PCIBusDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\RTCDriver.cs" />
+    <Compile Include="DriverSystem\HardwareResources\IOPortStream.cs" />
+    <Compile Include="DriverSystem\HardwareResources\MemoryBlock.cs" />
+    <Compile Include="DriverSystem\DeviceManager.cs" />
+    <Compile Include="DriverSystem\DriverFlags.cs" />
+    <Compile Include="DriverSystem\DriverManager.cs" />
+    <Compile Include="DriverSystem\GenericDevice.cs" />
+    <Compile Include="DriverSystem\GenericDriver.cs" />
     <Compile Include="DriverSystem\IDevice.cs" />
     <Compile Include="DriverSystem\IDeviceManager.cs" />
     <Compile Include="DriverSystem\IDriver.cs" />
     <Compile Include="DriverSystem\IDriverContext.cs" />
     <Compile Include="DriverSystem\IHardwareResourceManager.cs" />
-    <Compile Include="DriverSystem\HardwareResources\IOPortStream.cs" />
-    <Compile Include="DriverSystem\HardwareResources\MemoryBlock.cs" />
+    <Compile Include="FileSystem\Ext2\Block.cs" />
+    <Compile Include="FileSystem\Ext2\DirectoryFileFormat.cs" />
+    <Compile Include="FileSystem\Ext2\Ext2FS.cs" />
+    <Compile Include="FileSystem\Ext2\FileSystem.cs" />
+    <Compile Include="FileSystem\Ext2\GroupDescriptor.cs" />
+    <Compile Include="FileSystem\Ext2\INode.cs" />
+    <Compile Include="FileSystem\Ext2\SuperBlock.cs" />
+    <Compile Include="FileSystem\FAT\FAT.cs" />
+    <Compile Include="FileSystem\DiskManager.cs" />
+    <Compile Include="FileSystem\GenericDisk.cs" />
+    <Compile Include="FileSystem\IFileSystem.cs" />
+    <Compile Include="FileSystem\OpenFile.cs" />
+    <Compile Include="FileSystem\Partition.cs" />
+    <Compile Include="FileSystem\VolumeManager.cs" />
     <Compile Include="Foundation\BinaryTool.cs" />
+    <Compile Include="Foundation\ByteString.cs" />
+    <Compile Include="Foundation\CalendarManager.cs" />
     <Compile Include="Foundation\CalendarType.cs" />
-    <Compile Include="Foundation\StringBuilder.cs" />
+    <Compile Include="Foundation\Convert.cs" />
+    <Compile Include="Foundation\CString8.cs" />
+    <Compile Include="Foundation\GregorianCalendar.cs" />
+    <Compile Include="Foundation\ICalendar.cs" />
     <Compile Include="Foundation\PString8.cs" />
+    <Compile Include="Foundation\StringBuilder.cs" />
+    <Compile Include="Foundation\Testcase.cs" />
+    <Compile Include="Foundation\Time.cs" />
     <Compile Include="Foundation\Timestamp.cs" />
     <Compile Include="Foundation\Timezone.cs" />
-    <Compile Include="Foundation\Time.cs" />
-    <Compile Include="Foundation\CString8.cs" />
-    <Compile Include="Foundation\ByteString.cs" />
-    <Compile Include="Foundation\Convert.cs" />
-    <Compile Include="Foundation\GregorianCalendar.cs" />
-    <Compile Include="Foundation\Testcase.cs" />
-    <Compile Include="Foundation\ICalendar.cs" />
-    <Compile Include="Foundation\CalendarManager.cs" />
-    <Compile Include="FileSystem\GroupDescriptor.cs" />
-    <Compile Include="FileSystem\DirectoryFileFormat.cs" />
-    <Compile Include="FileSystem\INode.cs" />
-    <Compile Include="FileSystem\SuperBlock.cs" />
-    <Compile Include="FileSystem\Block.cs" />
-    <Compile Include="FileSystem\Ext2FS.cs" />
-    <Compile Include="FileSystem\FileSystem.cs" />
-    <Compile Include="DiagnosticTool\Server.cs" />
-    <Compile Include="Korlib\System\ArgumentOutOfRangeException.cs" />
-    <Compile Include="Korlib\System\CharEnumerator.cs" />
-    <Compile Include="Korlib\System\Collections\ArrayList.cs" />
+    <Compile Include="Korlib\Runtime\ExceptionHandlingClause.cs" />
+    <Compile Include="Korlib\Runtime\FieldMetadata.cs" />
+    <Compile Include="Korlib\Runtime\ITable.cs" />
+    <Compile Include="Korlib\Runtime\Metadata.cs" />
+    <Compile Include="Korlib\Runtime\MetadataSignatures.cs" />
+    <Compile Include="Korlib\Runtime\MetadataToken.cs" />
+    <Compile Include="Korlib\Runtime\MethodBoundary.cs" />
+    <Compile Include="Korlib\Runtime\Runtime.cs" />
+    <Compile Include="Korlib\Runtime\TokenType.cs" />
+    <Compile Include="Korlib\Runtime\TypeInfo.cs" />
+    <Compile Include="Korlib\Runtime\TypeMetadata.cs" />
+    <Compile Include="Korlib\Runtime\VTable.cs" />
     <Compile Include="Korlib\System\Collections\Generic\ICollection.cs" />
     <Compile Include="Korlib\System\Collections\Generic\IEnumerable.cs" />
     <Compile Include="Korlib\System\Collections\Generic\IEnumerator.cs" />
     <Compile Include="Korlib\System\Collections\Generic\IList.cs" />
     <Compile Include="Korlib\System\Collections\Generic\List.cs" />
+    <Compile Include="Korlib\System\Collections\ArrayList.cs" />
     <Compile Include="Korlib\System\Collections\ICollection.cs" />
     <Compile Include="Korlib\System\Collections\IEnumerable.cs" />
     <Compile Include="Korlib\System\Collections\IEnumerator.cs" />
     <Compile Include="Korlib\System\Collections\IList.cs" />
-    <Compile Include="Korlib\System\OutOfMemoryException.cs" />
+    <Compile Include="Korlib\System\ArgumentException.cs" />
+    <Compile Include="Korlib\System\ArgumentNullException.cs" />
+    <Compile Include="Korlib\System\ArgumentOutOfRangeException.cs" />
+    <Compile Include="Korlib\System\ArithmeticException.cs" />
+    <Compile Include="Korlib\System\Array.cs" />
+    <Compile Include="Korlib\System\Boolean.cs" />
+    <Compile Include="Korlib\System\Byte.cs" />
+    <Compile Include="Korlib\System\Char.cs" />
+    <Compile Include="Korlib\System\CharEnumerator.cs" />
+    <Compile Include="Korlib\System\DivideByZeroException.cs" />
+    <Compile Include="Korlib\System\Enum.cs" />
+    <Compile Include="Korlib\System\Exception.cs" />
     <Compile Include="Korlib\System\ICloneable.cs" />
     <Compile Include="Korlib\System\IDisposable.cs" />
+    <Compile Include="Korlib\System\Int16.cs" />
+    <Compile Include="Korlib\System\Int32.cs" />
+    <Compile Include="Korlib\System\Int64.cs" />
+    <Compile Include="Korlib\System\InvalidCastException.cs" />
     <Compile Include="Korlib\System\InvalidOperationException.cs" />
-    <Compile Include="Korlib\System\DivideByZeroException.cs" />
+    <Compile Include="Korlib\System\NotImplementedException.cs" />
+    <Compile Include="Korlib\System\NotSupportedException.cs" />
     <Compile Include="Korlib\System\NullReferenceException.cs" />
+    <Compile Include="Korlib\System\Object.cs" />
+    <Compile Include="Korlib\System\OutOfMemoryException.cs" />
+    <Compile Include="Korlib\System\OverflowException.cs" />
+    <Compile Include="Korlib\System\SByte.cs" />
+    <Compile Include="Korlib\System\String.cs" />
+    <Compile Include="Korlib\System\SystemException.cs" />
+    <Compile Include="Korlib\System\UInt16.cs" />
+    <Compile Include="Korlib\System\UInt32.cs" />
+    <Compile Include="Korlib\System\UInt64.cs" />
+    <Compile Include="Korlib\System\ValueType.cs" />
+    <Compile Include="Korlib\System\Void.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Cls.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\Commands.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\CpuId.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Egg.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\Stage.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\MemDump.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\Version.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\Keymap.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Halt.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\Help.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\Keymap.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\LS.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\LsPci.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\MemDump.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\MemView.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Panic.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Reboot.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Show.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\LS.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\MemView.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\Help.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\Commands.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\LsPci.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\Timezone.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\Time.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Snake.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\Stage.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Testcase.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\CpuId.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\TestFat.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\TestFloppy.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\Time.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\Timezone.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\Version.cs" />
     <Compile Include="Shell\Commands\CommandExecutionAttemptResult.cs" />
     <Compile Include="Shell\Commands\CommandExecutionContext.cs" />
     <Compile Include="Shell\Commands\CommandTableEntry.cs" />
     <Compile Include="Shell\Commands\CommandTableHeader.cs" />
     <Compile Include="Shell\Prompter.cs" />
-    <Compile Include="Korlib\Runtime\ExceptionHandlingClause.cs" />
-    <Compile Include="Korlib\Runtime\MethodBoundary.cs" />
-    <Compile Include="Korlib\Runtime\MetadataToken.cs" />
-    <Compile Include="Korlib\Runtime\Metadata.cs" />
-    <Compile Include="Korlib\Runtime\TypeMetadata.cs" />
-    <Compile Include="Korlib\Runtime\Runtime.cs" />
-    <Compile Include="Korlib\Runtime\FieldMetadata.cs" />
-    <Compile Include="Korlib\Runtime\MetadataSignatures.cs" />
-    <Compile Include="Korlib\Runtime\VTable.cs" />
-    <Compile Include="Korlib\Runtime\ITable.cs" />
-    <Compile Include="Korlib\Runtime\TokenType.cs" />
-    <Compile Include="Korlib\Runtime\TypeInfo.cs" />
-    <Compile Include="Korlib\System\Object.cs" />
-    <Compile Include="Korlib\System\String.cs" />
-    <Compile Include="Korlib\System\Exception.cs" />
-    <Compile Include="Korlib\System\InvalidCastException.cs" />
-    <Compile Include="Korlib\System\SystemException.cs" />
-    <Compile Include="Korlib\System\OverflowException.cs" />
-    <Compile Include="Korlib\System\ArithmeticException.cs" />
-    <Compile Include="Korlib\System\ArgumentException.cs" />
-    <Compile Include="Korlib\System\ArgumentNullException.cs" />
-    <Compile Include="Korlib\System\NotSupportedException.cs" />
-    <Compile Include="Korlib\System\NotImplementedException.cs" />
-    <Compile Include="Korlib\System\ValueType.cs" />
-    <Compile Include="Korlib\System\Enum.cs" />
-    <Compile Include="Korlib\System\UInt64.cs" />
-    <Compile Include="Korlib\System\UInt32.cs" />
-    <Compile Include="Korlib\System\UInt16.cs" />
-    <Compile Include="Korlib\System\SByte.cs" />
-    <Compile Include="Korlib\System\Int64.cs" />
-    <Compile Include="Korlib\System\Int32.cs" />
-    <Compile Include="Korlib\System\Int16.cs" />
-    <Compile Include="Korlib\System\Byte.cs" />
-    <Compile Include="Korlib\System\Boolean.cs" />
-    <Compile Include="Korlib\System\Char.cs" />
-    <Compile Include="Korlib\System\Void.cs" />
-    <Compile Include="Korlib\System\Array.cs" />
-    <Compile Include="KernelTestsWrapper.cs" />
     <Compile Include="ASCII.cs" />
-    <Compile Include="Clock.cs" />
-    <Compile Include="Multiboot.cs" />
-    <Compile Include="Console.cs" />
-    <Compile Include="EntryModule.cs" />
-    <Compile Include="KernelError.cs" />
-    <Compile Include="KeyMap.cs" />
-    <Compile Include="CommandLine.cs" />
-    <Compile Include="PageAllocator.cs" />
-    <Compile Include="Stubs.cs" />
-    <Compile Include="EventRegisterStatus.cs" />
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="KernelStage.cs" />
+    <Compile Include="Clock.cs" />
+    <Compile Include="CommandLine.cs" />
+    <Compile Include="Console.cs" />
     <Compile Include="Diagnostics.cs" />
+    <Compile Include="EntryModule.cs" />
+    <Compile Include="EventRegisterStatus.cs" />
+    <Compile Include="KernelError.cs" />
+    <Compile Include="KernelStage.cs" />
+    <Compile Include="KernelTestsWrapper.cs" />
+    <Compile Include="KeyMap.cs" />
+    <Compile Include="Multiboot.cs" />
+    <Compile Include="PageAllocator.cs" />
     <Compile Include="PageAttributes.cs" />
     <Compile Include="PagingMemoryRequirements.cs" />
+    <Compile Include="Stubs.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\..\build\Temp\BuiltinKeymaps.ska">
