--- a/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -63,36 +63,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConditionalOperator .cs" />
-    <Compile Include="Equals.cs" />
-    <Compile Include="Generics.cs" />
-    <Compile Include="Exceptions.cs" />
     <Compile Include="Abstract.cs" />
-    <Compile Include="Misc.cs" />
     <Compile Include="Arguments.cs" />
-    <Compile Include="String.cs" />
-    <Compile Include="Interface.cs" />
-    <Compile Include="Enum.cs" />
-    <Compile Include="BooleanOrderOfOperations.cs" />
-    <Compile Include="OrderOfOperations.cs" />
-    <Compile Include="Struct.cs" />
-    <Compile Include="Object.cs" />
+    <Compile Include="Arithmetic.cs" />
     <Compile Include="Array.cs" />
-    <Compile Include="Inheritance.cs" />
+    <Compile Include="BitwiseOperators.cs" />
     <Compile Include="Boolean.cs" />
-    <Compile Include="X86.cs" />
+    <Compile Include="BooleanOrderOfOperations.cs" />
+    <Compile Include="Boxing.cs" />
     <Compile Include="ByteString.cs" />
-    <Compile Include="PointerCast.cs" />
-    <Compile Include="StaticConstructor.cs" />
+    <Compile Include="ConditionalOperator .cs" />
+    <Compile Include="Delegates.cs" />
+    <Compile Include="Enum.cs" />
+    <Compile Include="Equals.cs" />
+    <Compile Include="Exceptions.cs" />
+    <Compile Include="Generics.cs" />
+    <Compile Include="Inheritance.cs" />
+    <Compile Include="Interface.cs" />
+    <Compile Include="Misc.cs" />
     <Compile Include="MixedIntegerCast.cs" />
     <Compile Include="MixedIntegerPointerCast.cs" />
-    <Compile Include="Switch.cs" />
+    <Compile Include="Object.cs" />
+    <Compile Include="OrderOfOperations.cs" />
+    <Compile Include="PointerCast.cs" />
     <Compile Include="SignedIntegerCast.cs" />
-    <Compile Include="WhileLoop.cs" />
-    <Compile Include="BitwiseOperators.cs" />
+    <Compile Include="StaticConstructor.cs" />
+    <Compile Include="String.cs" />
+    <Compile Include="Struct.cs" />
+    <Compile Include="Switch.cs" />
     <Compile Include="UnsignedIntegerCast.cs" />
-    <Compile Include="Boxing.cs" />
-    <Compile Include="Arithmetic.cs" />
+    <Compile Include="WhileLoop.cs" />
+    <Compile Include="X86.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
