--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -84,15 +84,16 @@
     <Compile Include="ADC\X86\BootControl.cs" />
     <Compile Include="ADC\X86\CMOS.cs" />
     <Compile Include="ADC\X86\DMA.cs" />
+    <Compile Include="ADC\X86\DMAChannel8bit.cs" />
     <Compile Include="ADC\X86\DTPointer.cs" />
     <Compile Include="ADC\X86\ExceptionHandling.cs" />
-    <Compile Include="ADC\X86\FloppyDiskController.cs" />
     <Compile Include="ADC\X86\GDT.cs" />
     <Compile Include="ADC\X86\HardwareResourceManager.cs" />
     <Compile Include="ADC\X86\IDT.cs" />
     <Compile Include="ADC\X86\Interlocked.cs" />
     <Compile Include="ADC\X86\IO.cs" />
     <Compile Include="ADC\X86\IOPortStream8bit.cs" />
+    <Compile Include="ADC\X86\IRQHandler16bit.cs" />
     <Compile Include="ADC\X86\Keyboard.cs" />
     <Compile Include="ADC\X86\MemoryUtil.cs" />
     <Compile Include="ADC\X86\Pager.cs" />
@@ -111,7 +112,6 @@
     <Compile Include="ADC\BootControl.cs" />
     <Compile Include="ADC\Dispatcher.cs" />
     <Compile Include="ADC\ExceptionHandling.cs" />
-    <Compile Include="ADC\FloppyDiskController.cs" />
     <Compile Include="ADC\Interlocked.cs" />
     <Compile Include="ADC\IProcessor.cs" />
     <Compile Include="ADC\IScheduler.cs" />
@@ -131,21 +131,24 @@
     <Compile Include="ADC\Thread.cs" />
     <Compile Include="ADC\ThreadManager.cs" />
     <Compile Include="ADC\Timer.cs" />
-    <Compile Include="BlockDevice\ByteBuffer.cs" />
-    <Compile Include="BlockDevice\ContinuousRamDisk.cs" />
-    <Compile Include="BlockDevice\FloppyDisk.cs" />
-    <Compile Include="BlockDevice\GenericBlockDevice.cs" />
-    <Compile Include="BlockDevice\IBlockDevice.cs" />
-    <Compile Include="BlockDevice\KernelDisk.cs" />
     <Compile Include="DiagnosticTool\Server.cs" />
-    <Compile Include="DriverSystem\Drivers\FloppyDiskDriver.cs" />
-    <Compile Include="DriverSystem\Drivers\KeyboardDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\FloppyDiskDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\GenericBlockDeviceAdapter.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\IBlockDevice.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\IBlockDeviceController.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\KernelDiskDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\RamDiskDriver.cs" />
+    <Compile Include="DriverSystem\Drivers\Character\KeyboardDriver.cs" />
     <Compile Include="DriverSystem\Drivers\LPCBusDriver.cs" />
     <Compile Include="DriverSystem\Drivers\PCIBusDriver.cs" />
     <Compile Include="DriverSystem\Drivers\RTCDriver.cs" />
+    <Compile Include="DriverSystem\HardwareResources\DMAChannel.cs" />
     <Compile Include="DriverSystem\HardwareResources\IOPortStream.cs" />
+    <Compile Include="DriverSystem\HardwareResources\IRQHandler.cs" />
     <Compile Include="DriverSystem\HardwareResources\MemoryBlock.cs" />
     <Compile Include="DriverSystem\DeviceManager.cs" />
+    <Compile Include="DriverSystem\DeviceResource.cs" />
+    <Compile Include="DriverSystem\DeviceResourceManager.cs" />
     <Compile Include="DriverSystem\DriverFlags.cs" />
     <Compile Include="DriverSystem\DriverManager.cs" />
     <Compile Include="DriverSystem\GenericDevice.cs" />
@@ -245,6 +248,7 @@
     <Compile Include="Shell\Commands\BuiltIn\Halt.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Help.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Keymap.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\ListResources.cs" />
     <Compile Include="Shell\Commands\BuiltIn\LS.cs" />
     <Compile Include="Shell\Commands\BuiltIn\LsPci.cs" />
     <Compile Include="Shell\Commands\BuiltIn\MemDump.cs" />
@@ -255,8 +259,6 @@
     <Compile Include="Shell\Commands\BuiltIn\Snake.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Stage.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Testcase.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\TestFat.cs" />
-    <Compile Include="Shell\Commands\BuiltIn\TestFloppy.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Time.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Timezone.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Version.cs" />
