* Fixed missing resource in VS project file.

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -291,6 +291,11 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\..\Data\FloppyDiskImage\fat12.img">
+      <LogicalName>fat12.img</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Documents\ADC.txt" />
   </ItemGroup>
   <ItemGroup>
