--- a/Tools/DiagnosticTool/DiagnosticTool.csproj
+++ b/Tools/DiagnosticTool/DiagnosticTool.csproj
@@ -48,18 +48,12 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="INamedPipe.cs" />
-    <Compile Include="MainWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="MainWindow.cs" />
     <Compile Include="MainWindow.Designer.cs" />
-    <Compile Include="MemoryView.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="MemoryView.cs" />
     <Compile Include="MemoryView.Designer.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="UnitTestsView.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="UnitTestsView.cs" />
     <Compile Include="UnitTestsView.Designer.cs" />
     <Compile Include="UnixNamedPipe.cs" />
     <Compile Include="WindowsNamedPipe.cs" />
